# racetyper

./: .env  Cargo.toml
migrations/2020-04-27-142612_create_typing_sessions/: down.sql  up.sql
src/: main.rs
src/cmd/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
static/: index.html  main.js  style.css
