[package]
name = "racetyper"
version = "0.0.1"
authors = ["Borna"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"


[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"

serde_json = "1.0"
serde = { version = "1.0.106", features = ["derive"] }
rand = "0.7"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
csv = "1.1"
